Ensure text remains visible during font load

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,7 @@ $logo-size: 28pt;
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 300;
+  font-display: swap;
   src: url('/fonts/open-sans-v18-latin-300.eot'); /* IE9 Compat Modes */
   src: local(''),
        url('/fonts/open-sans-v18-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
